--- a/Poker Casino.html
+++ b/Poker Casino.html
@@ -3,107 +3,7 @@
 <html>
 	<head>
 		<title></title>
-		<style>		
-		body
-		{
-			background-image: url("card images/pokerTable.jpg");
-			background-size: auto;
-			background-repeat: no-repeat;
-			cursor: default;
-		}
-		
-		#theTitle
-		{
-			font: bold 40pt Calibri;
-			color: orange;
-			text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
-			text-align: center;
-			padding: 1%;
-		}		
-
-		#game_status
-		{
-			font: bold 36pt Calibri;
-			color: orange;
-			text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
-			text-align: center;
-		}
-		
-		#theTable span
-		{
-			padding: 2%;
-			display: inline-block;
-			margin: auto;	
-			vertical-align: top;
-			
-		}
-		
-		#theTable 
-		{
-			display: inline-block;
-			padding-left: 2%;
-			padding-right: 2%;
-			float: left;
-			
-		}
-
-		#pokerboard
-		{
-			display: inline-block;
-			float: left;
-
-		}
-				
-		button
-		{	
-			font: bold;
-			font-size: 25px;
-			cursor: pointer;
-			color: black;
-		}
-		
-		#comboTable
-		{
-			border: solid thick black;
-			padding: 1%;
-			background-color: white;			
-		}
-		
-		#comboTable th
-		{
-			text-align: center;
-			font-size: 25px;
-		}
-		
-		#comboTable td
-		{
-			border: solid thick black;
-			padding: 10px;
-			font-size: 20px;
-		}
-		
-		#fixHand
-		{
-			float: right;
-			padding-right: 2%;
-			
-		}
-		
-		#fixHand h1
-		{
-			font-size: 30px;
-			color: orange;
-			text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
-		}
-		
-		#gamble
-		{
-			border: solid thick black;
-			float: right;
-			padding-right: 5%;
-		}
-		
-		</style>
+		<style></style>
 		<script>
 		function initialize()
 		{	
