--- a/Poker Casino.html
+++ b/Poker Casino.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<title></title>
+		<link rel = "stylesheet" type = "text/css" href = "PokerCasino.css" />
 		<style></style>
 		<script>
 		function initialize()
